# yolo_inferenece_py_cpp

./: .gitignore  CMakeLists.txt  Convert_PyTorch_models.ipynb  ObjectDetector.cpp  ObjectDetector.h  README.md  fortiss.names  sd.names  yoloDetector.cpp  yolov5.cpp  yolov5.py
